<resources>
    <string name="app_name">HW-Week04_Day02_UserInterface</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_welcome_message">Sign up to see photo and videos from your friends.</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="email">Mobile Number or Email</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="ending_message"><![CDATA[By Signing up, you agree to our Terms & Privacy Policy]]></string>
    <string name="phone_number_username_or_email">Phone number, username or email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in_with_facebook">Log in With Facebook</string>
    <string name="dont_have_an_account">Dont have an account?</string>
</resources>